# purescript-json-deprecated

./: .gitignore  .travis.yml  Gruntfile.js  README.md  bower.json  docs.md  gen-readme.js  gulpfile.js  header.md  package.json  purescript-json.cabal
docs/: Module.md
docs/Data/: JSON.md
examples/: Complex.purs  Simple.purs
src/Data/: JSON.js  JSON.purs
tests/: Test.purs
