name:                purescript-json
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              philopon
maintainer:          philopon.dependence@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:       base >=4.6 && <4.8, purescript
  default-language:    Haskell2010
